Dumb fix for horizontal scrolling

--- a/res/styles/navbar.css
+++ b/res/styles/navbar.css
@@ -14,6 +14,7 @@ nav#topbar {
     top: 0rem;
     transition: top 300ms;
     line-height: 2em;
+    max-width:98vw;
 }
 
 nav#topbar a {
